# prime-rl

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile.cuda  README.md  pyproject.toml
.github/workflows/: cpu_tests.yaml  gpu_tests.yaml  nightly_tests.yaml  release.yaml
configs/acereason_math/: stage1.toml  stage2.toml
configs/ci/integration/: alphabet_sort.toml
configs/ci/integration/reverse_text/: resume.toml  start.toml
configs/ci/integration/reverse_text_lora/: resume.toml  start.toml
configs/ci/integration/reverse_text_moe/: start.toml
configs/ci/integration/reverse_text_multi_run/: orchestrator.toml
configs/ci/nightly/: acereason_math.toml  multimodal_color_codeword.toml
configs/deepscaler/: stage1.toml  stage2.toml  stage3.toml
configs/gsm8k/: rl.toml
configs/hendrycks_math/: sanity.toml
configs/multi_reverse_text/: rl.toml
configs/multimodal/: rl_color_codeword.toml  rl_color_codeword_test.toml
configs/nemotron_4node/: rl.toml
configs/nemotron_debug/: rl.toml
docs/: checkpointing.md  configs.md  entrypoints.md  h200-rollout-tail-investigation.md  index.md  kubernetes.md  mint.json  on_policy_distillation.md  ray.md  training.md  trajectories.md  troubleshooting.md
examples/alphabet_sort/: sft_distill_hard.toml
examples/hendrycks_sanity/: rl.toml
examples/reverse_text/: rl.toml
examples/wordle/: rl.toml
k8s/: README.md
k8s/raycluster/: README.md  aks.md  raycluster-16gpu.yaml  raycluster.yaml  rl-16gpu-example.toml  rl-example.toml  rl-launch-job.yaml
scripts/: install.sh  update_weights_microbench.py
skills/config/: SKILL.md
skills/entrypoints/: SKILL.md
skills/installation/: SKILL.md
skills/monitor-run/: SKILL.md
skills/training/start-run/: SKILL.md
src/prime_rl/entrypoints/: rl.py
src/prime_rl/inference/: patches.py
src/prime_rl/inference/vllm/: server.py  serving_tokens.py
src/prime_rl/inference/vllm/worker/: filesystem.py  nccl.py  weight_transfer.py
src/prime_rl/launchers/: rayjob.py
src/prime_rl/orchestrator/: advantage.py  envs.py  inference_metrics.py  orchestrator.py  request_picker.py  scheduler.py  trajectories.py
src/prime_rl/ray/: __init__.py  _utils.py  inference.py  native.py  train.py
src/prime_rl/templates/: inference.sbatch.j2  multi_node_rl.sbatch.j2
src/prime_rl/trainer/: batch.py  ckpt.py  model.py  utils.py
src/prime_rl/trainer/models/: __init__.py
src/prime_rl/trainer/models/layers/: moe.py
src/prime_rl/trainer/rl/: broadcast_schedule.py  data.py  loss.py  token_export.py  train.py
src/prime_rl/trainer/rl/broadcast/: filesystem.py  nccl.py
src/prime_rl/trainer/sft/: data.py  train.py
src/prime_rl/transport/: __init__.py  ray.py  types.py
src/prime_rl/utils/: client.py  elastic.py  logger.py  pathing.py  utils.py
src/prime_rl/utils/monitor/: prime.py  wandb.py
tests/: utils.py
tests/integration/: test_reverse_text_multi_run.py
tests/unit/: test_configs.py  test_rayjob_launcher.py
tests/unit/inference/: test_patches.py
tests/unit/orchestrator/: test_advantage.py  test_batch.py  test_inference_metrics.py  test_orchestrator_setup.py  test_request_picker.py  test_scheduler.py  test_sft_trajectories.py  test_trajectories.py
tests/unit/ray/: test_train.py
tests/unit/train/: test_model.py  test_runs.py
tests/unit/train/models/: test_qwen3_5_moe.py
tests/unit/train/rl/: test_loss.py  test_nccl_broadcast_helpers.py  test_packer.py
tests/unit/trainer/: test_broadcast_schedule.py
tests/unit/utils/: test_clean_exit.py  test_client.py  test_pathing.py
